--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,11 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-location:21.0.0'
 
+    // below dependency for using the retrofit
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
 
 }
