--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,10 +22,17 @@
         android:theme="@style/AppTheme.NoActionBar"
         tools:targetApi="31">
         <activity
-            android:name=".activities.LockScreen"
-            android:exported="false">
+            android:name=".activities.RetrofitActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
+        <activity
+            android:name=".activities.LockScreen"
+            android:exported="false"></activity>
         <activity
             android:name=".activities.LocationActivity"
             android:exported="false" />
@@ -35,11 +42,7 @@
         <activity
             android:name=".activities.MainActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <!--
         <receiver android:name=".broadcasts.StartupOnBootUpReceiver"
@@ -79,9 +82,9 @@
             </intent-filter>
         </receiver>
 
-        <service android:name=".service.MyService"
-            android:exported="true"/>
-
+        <service
+            android:name=".service.MyService"
+            android:exported="true" />
     </application>
 
 </manifest>
