--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,17 +22,23 @@
         android:theme="@style/AppTheme.NoActionBar"
         tools:targetApi="31">
         <activity
-            android:name=".activities.RetrofitActivity"
-            android:exported="true">
+            android:name=".retrofit_examples.RegisterActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".activities.RetrofitActivity"
+            android:exported="false">
+
+        </activity>
         <activity
             android:name=".activities.LockScreen"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".activities.LocationActivity"
             android:exported="false" />
@@ -41,9 +47,7 @@
             android:exported="false" />
         <activity
             android:name=".activities.MainActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="false"/>
         <!--
         <receiver android:name=".broadcasts.StartupOnBootUpReceiver"
             android:exported="true">
