--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,12 +23,8 @@
         tools:targetApi="31">
         <activity
             android:name=".retrofit_examples.RegisterActivity"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false" >
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <activity
@@ -47,7 +43,14 @@
             android:exported="false" />
         <activity
             android:name=".activities.MainActivity"
-            android:exported="false"/>
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <!--
         <receiver android:name=".broadcasts.StartupOnBootUpReceiver"
             android:exported="true">
@@ -87,7 +90,7 @@
         </receiver>
 
         <service
-            android:name=".service.MyService"
+            android:name=".service.TimeService"
             android:exported="true" />
     </application>
 
